test/cases/aarch64-macos/hello_world_with_updates.0.zig
// error
// output_mode=Exe
// target=aarch64-macos
//
// :107:9: error: struct 'tmp.tmp' has no member named 'main'
